--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+library.admin.password=secret-place-holder
+library.admin.username=admin@Library.com
+spring.security.oauth2.client.registration.GmailAPI.provider=GmailAPI
+spring.security.oauth2.client.registration.GmailAPI.redirect-uri=<your redirect url>
+spring.security.oauth2.client.registration.GmailAPI.scope=read,write
+spring.security.oauth2.client.registration.GmailAPI.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.GmailAPI.client-secret=<your client Secret>
+spring.security.oauth2.client.registration.GmailAPI.client-id=<your client ID>
+spring.security.oauth2.client.provider.GmailAPI.token-uri=null
+spring.security.oauth2.client.provider.GmailAPI.authorization-uri=https://accounts.google.com/o/oauth2/auth
 server.forward-headers-strategy=framework
 admin.password=P"7cbj8S'i
 admin.username=admin@LibConsumer.com
